[tool.poetry]
name = "chatgpt_cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
chatgpt = "chatgpt_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
